# personal_github_io_website

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  personal-site.lektorproject  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-website.yml  merge-schedule.yml  preview-website.yml
apis/blogbot/: api.py  app.ipynb  models.py  prompts.py  scraper.py
apis/blogbot/templates/: index.html  search.html  social.html
assets/static/css/: custom.css
built_website/.lektor/: buildstate
built_website/art/: index.html
built_website/bio/: index.html
built_website/blog/: index.html
built_website/static/css/: custom.css
configs/: atom.ini  disqus-comments.ini
content/: contents.lr
content/art/: contents.lr
content/art/art1/: contents.lr
content/art/art2/: contents.lr
content/art/ascii-pumpkin/: contents.lr
content/art/cora_bunny/: contents.lr
content/art/cora_cam1/: contents.lr
content/art/cora_cam2/: contents.lr
content/art/cora_cam3/: contents.lr
content/art/cora_drawing/: contents.lr
content/art/desert/: contents.lr
content/art/edward_hopper_gas/: contents.lr
content/art/fireman_sketch/: contents.lr
content/art/lady/: contents.lr
content/bio/: contents.lr
databags/: nav.json
models/: art-post.ini  art.ini  blog.ini
notebooks/: blogbot_scraper.ipynb  llamabot.ipynb
posting_script/: README.md  config.py  publish_post.py
posting_script/templates/: art_post.lr  blog_post.lr
templates/: art-post.html  art.html  blog-post.html  layout.html  resume.html
templates/macros/: art.html  blog.html
(+123 files in other folders)
