[project]
name = "personal_github_io_website"
version = "0.1.0"
description = "Lektor project to create Roni's static website."
authors = [
    { name = "Roni Kobrosly", email = "roni.kobrosly@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babel == 2.17.0",
    "blinker == 1.9.0",
    "certifi == 2025.10.5",
    "charset-normalizer == 3.4.4",
    "click == 8.3.0",
    "exifread == 3.5.1",
    "feedgenerator == 2.2.1",
    "filetype == 1.2.0",
    "flask == 2.3.3",
    "idna == 3.11",
    "inifile == 0.4.1",
    "itsdangerous == 2.2.0",
    "jinja2 == 3.1.6",
    "lektor == 3.3.12",
    "lektor-atom == 0.4.0",
    "lektor-markdown-header-anchors == 0.3.1",
    "lektor-markdown-highlighter == 0.3.2",
    "lektor-tags == 0.5.2",
    "markupsafe == 3.0.3",
    "mistune == 0.8.4",
    "pip == 25.3",
    "pygments == 2.19.2",
    "python-slugify == 8.0.4",
    "pytz == 2025.2",
    "requests == 2.32.5",
    "setuptools == 80.9.0",
    "text-unidecode == 1.3",
    "urllib3 == 2.5.0",
    "watchdog == 6.0.0",
    "werkzeug == 2.3.8"
]